--- a/Lab0.qmd
+++ b/Lab0.qmd
@@ -7,6 +7,28 @@ editor: visual
 
 ## Individual Assigments
 
-## Team Assignment
+Josh:
+
+![](images/IMG_4202.jpg)
+
+This is a photo of me cross country skiing for the first time over winter break. I went with my fiance and her mother in Oregon. It was so much harder than downhill skiing in my opinion!\
+
+I want to know what percent of a musician's success is from time practicing, connections with people in industry, and purely luck. I'm not how someone could measure success though, maybe through album sales and net worth?
+
+I would be excited to finally have a full time job and be in industry. Right now I want to be involved with modeling or risk assessment. Ideally I would be at a consulting firm.\
+
+My greatest career accomplishment would be running my own statistical consulting firm. I want to be my own boss, but stay working in industry.\
+
+I am hoping to learn how to apply my knowledge to real life problems. I hope to use QQQ and learn how to best interpet statistics to give advice for future development. I also want to learn the most effective ways to work within a team.\
+
+I have been playing guitar for about 2 years. I used to play the drums in high school, but they took up too much space in my apartment during undergraduate, so I took up guitar. I was in a band in my last year of undergraduate, and I'm hoping to start another soon in the Denver/Boulder area!
+
+## About Our Team
+
+![](images/IMG_5482.jpg)
+
+**Team Name:** Mountain Dewds!
+
+**Main Goal for this Semester:**
 
 ## Applied Team Assigment
