--- a/Lab0.qmd
+++ b/Lab0.qmd
@@ -31,4 +31,5 @@ I have been playing guitar for about 2 years. I used to play the drums in high s
 
 **Main Goal for this Semester:**
 
+Our main goal for this semester is
 ## Applied Team Assigment
