--- a/Lab0.qmd
+++ b/Lab0.qmd
@@ -31,5 +31,5 @@ I have been playing guitar for about 2 years. I used to play the drums in high s
 
 **Main Goal for this Semester:**
 
-Our main goal for this semester is to have fun
+Our main goal for this semester is to learn new statistical learning methods and work together as a team.
 ## Applied Team Assigment
