--- a/Lab0.qmd
+++ b/Lab0.qmd
@@ -31,6 +31,10 @@ I have been playing guitar for about 2 years. I used to play the drums in high s
 
 **Main Goal for this Semester:**
 
-Our main goal for this semester is to learn new statistical learning methods and work together as a team.
+## Applied Portion
 
-## Applied Team Assigment
+## Individual
+
+Josh
+
+## Team
