--- a/Lab0.qmd
+++ b/Lab0.qmd
@@ -30,6 +30,7 @@ I have been playing guitar for about 2 years. I used to play the drums in high s
 **Team Name:** Mountain Dewds!
 
 **Main Goal for this Semester:**
+We want to continue doing well on the trat exams. We also want to learn how to apply the learning methods in this class.
 
 ## Applied Portion
 
