--- a/Lab0.qmd
+++ b/Lab0.qmd
@@ -130,7 +130,7 @@ I had trouble doing this, so I did not present it here.
 4. Summarize the Q1, Q2, and Q3 aspects of this “project.” Use your imagination. Everyone\
 should have a different scenario.
 
-A company wants to launch a new hot dog campaign, "hot dogs are the best sandwhich!" They collected data on where they should market this, including respondents height and amount spent on blueray dvds. Q1 in this case could be data collected from a survey of individuals who think hot dogs are a sandwich over their amount spent on blu-ray dvds in the past year and height. The X1 column is each observation's amount spent in dollars on blu-ray dvds and X2 is each respondents height. The class, Y, is whether or not the respondent believes a hot dog is a sandwich. The Q2 aspect of this project is using knn to identify decision boundaries on height and amount spent on blu-rays to find any relationship. In Q3, we would conclude that there is likely no relationship between these variables and the class, so this company should not invest differently in blu-ray dvd ads or markets that prioritize tall individuals.
+A company wants to launch a new hot dog campaign over blu-ray ads in blue-rays and products in the top shelves of stores. The slogan is "hot dogs are the best sandwhich!" They collected data on where they should market this, including respondents height and amount spent on blu-ray dvds. Q1 in this case could be data collected from a survey of individuals who think hot dogs are a sandwich over their amount spent on blu-ray dvds in the past year and height. The X1 column is each observation's amount spent in dollars on blu-ray dvds and X2 is each respondents height. The class, Y, is whether or not the respondent believes a hot dog is a sandwich. The Q2 aspect of this project is using knn to identify decision boundaries on height and amount spent on blu-rays to find any relationship. In Q3, we would conclude that there is likely no relationship between these variables and the class, so this company should not invest differently in blu-ray dvd ads or markets that prioritize tall individuals.
 
 \
 5. Think about and discuss with your team some of the bonus questions below.
