--- a/Lab0 (5).qmd
+++ b/Lab0 (5).qmd
@@ -40,7 +40,7 @@ I aim to learn more about how to work in a team throughout a full semester and i
 Something I am really striving for this semester is to be the best player I can be for the baseball team. There are first team, second team, and third team all americans across the country so I am hoping to be selected to one.
 
 Chase:
-![]
+![](IMG_4898.jpeg)
 Here is an image of me playing golf at a course in Longmont.
 
 One question I would like to answer is how field position, yards to go, and score impact coaches offensive play calls in order to set up a team's defense in the best possible way.
