--- a/Lab0 (5).qmd
+++ b/Lab0 (5).qmd
@@ -55,9 +55,28 @@ I am hoping to improve on my teamwork skills while improving my skills in R. I a
 
 I love outdoor activities such as golfing, wake surfing, hunting, and spending time in the mountains.
 
+Will:
+
+![](IMG_6411.JPG)
+
+This is a photo of me on Gray's peak in the fall this year. My roommate and I climbed the mountain in October, along with Torrey's Peak in the same day. We were expecting it to be cold that high up during the fall, but we weren't expecting all of the wind!
+
+I am very interested in the environment, and where I am from in New Jersey there is an issue with a beetle that is killing a type of hardwood trees. The forest service has started to treat the trees in an effort to keep them from going extinct. I would like to see if their efforts are paying off using statistical methods. 
+
+I would think it would be very interested to work for either a statistical consulting firm, or a defense contractor in the future. I would like a job that allows me to apply what I have learned in school to interesting real world topics. 
+
+5 years from now I would like to be working my way up the ladder at a good company, or be starting my own business which would be my greatest achievement. 
+
+I am hoping to learn a variety of new statistical learning techniques and how to apply them in this class. The more methods that I know, the more valuable I would be to a hiring company in the near future.
+
+Something else interesting about me that is not included in the prompt is that my girlfriend and I are trying to visit all of the national parks in the United States. We went on two road trips in 2024 and visited 12 of them.
+
+
+
 ## About Our Team
 
 ![](IMG_5482.jpg)
+
 
 **Team Name:** Mountain Dewds!
 
@@ -318,6 +337,123 @@ Q2: The model uses the collected data to predict whether a player should be trad
 
 Q3: For a player with X1 = 15 (PPG) and X2 = 10 million (salary), the model predicted that they should not be traded. This shows that performance and salary alone may not always result in a trade, and other factors might be influencing the decision.
 ```
+
+
+Will:
+
+Generate the Data:
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(class)
+library(tinytex)
+library(ggplot2)
+```
+
+```{r}
+set.seed(127) 
+generate_y <- function(x1,x2) { 
+logit <- x1 -2*x2 -2*x1^2 + x2^2 + 3*x1*x2 +4*x1*x2^2 -3*x1^2*x2
+p <- exp(logit)/(1+exp(logit)) 
+y <- rbinom(1,1,p) 
+}
+```
+
+```{r}
+set.seed(127)
+n = 100
+X1 <- runif(n,0,1)
+X2 <- runif(n,0,1)
+Y <- rep(0,n) 
+for (i in 1:n) {
+Y[i] <- generate_y(X1[i],X2[i])
+}
+sum(Y)
+```
+
+```{r}
+training <- cbind(X1, X2,Y)
+training <- as.data.frame(training)
+```
+
+
+```{r}
+set.seed(128) 
+generate_y <- function(x1,x2) { 
+logit <- x1 -2*x2 -2*x1^2 + x2^2 + 3*x1*x2 +4*x1*x2^2 -3*x1^2*x2
+p <- exp(logit)/(1+exp(logit)) 
+y <- rbinom(1,1,p) 
+}
+```
+
+```{r}
+set.seed(128)
+n = 100
+X1 <- runif(n,0,1)
+X2 <- runif(n,0,1)
+Y <- rep(0,n) 
+for (i in 1:n) {
+Y[i] <- generate_y(X1[i],X2[i])
+}
+sum(Y)
+```
+
+```{r}
+testing <- cbind(X1,X2,Y)
+testing <- as.data.frame(testing)
+ggplot(data = testing, aes(x=X1, y=X2, color = Y)) +
+  geom_point()
+```
+
+## 1.
+```{r}
+testing$K2_pred <- as.data.frame(knn(train = training[1:2], test = testing[1:2], cl = training$Y, k = 2))[, 1]
+testing$K6_pred <- as.data.frame(knn(train = training[1:2], test = testing[1:2], cl = training$Y, k = 6))[, 1]
+
+```
+## 2.
+
+```{r}
+misclassification_K2 <- mean(testing$K2_pred != testing$Y)
+print(misclassification_K2)
+misclassification_K6 <- mean(testing$K6_pred != testing$Y)
+print(misclassification_K6)
+```
+The misclassification for K = 2 and K = 6 was 0.41 for both. This means these models are equally as bad and I don't recommend using either one
+
+## 3.
+I had a lot of trouble trying to create the decision boundaries for these.
+
+## 4. 
+
+Q1:
+I will use the example I gave in my individual introduction in this lab. I want to test if a tree will live or die due to the the treatment it received against beetles. Y will equal whether the tree remains healthy or dies based on the tree's age (X1) and the tree's size (X2). We should care because the trees with the best chances of surviving should get the most possible resources so the species does not go extinct.
+
+Q2: 
+```{r}
+library(class)
+new_point <- data.frame(X1 = 0.5, X2 = 0.5)
+prediction_k2 <- knn(
+  train = training[1:2], 
+  test = new_point, 
+  cl = training$Y, 
+  k = 2
+)
+prediction_k6 <- knn(
+  train = training[1:2], 
+  test = new_point, 
+  cl = training$Y, 
+  k = 6
+)
+
+print(paste("Prediction for k = 2:", prediction_k2))
+print(paste("Prediction for k = 6:", prediction_k6))
+```
+This prediction shows that for both K=2 and K=6, the model predicts that the tree will die if its age and size are both 0.5. 
+
+Q3: This does have some ethical concerns as only some areas of forest may be saved because of optimal tree size, while other forests might die. This could impact animal habitat and could lead to a certain type of animal dying as well.
+
+
 
 ## Team
 
