--- a/Copy2OfLab1_Mountain_Dewds (1).qmd
+++ b/Copy2OfLab1_Mountain_Dewds (1).qmd
@@ -727,21 +727,21 @@ print_metrics("Naïve Bayes:", nb_metrics)
     ```{r}
     performance_df <- data.frame(
       Individual = c("Josh","Rishi"),
-      Logistic_Regression_Sensitivity = c(0.3333333,)
-      Logistic_Regression_Specificity = c(0.8528785,)
-      Logistic_Regression_ErrorRate = c(0.423,)
-      LDA_Sensitivity = c(0.6854991,0.6854991)
-      LDA_Specificity = c(0.4818763,lda_sensitivity)
-      LDA_ErrorRate = c(0.410,lda_misclassification)
-      QDA_Sensitivity = c(0.5762712,qda_sensitivity)
-      QDA_Specificity = c(0.6695096,qda_specificity)
-      QDA_ErrorRate = c(0.380,qda_misclassification)
-      NaiveBayes_Sensitivity = c(0.6403013,nb_sensitivity)
-      NaiveBayes_Specificity = c(0.6055437,nb_specificity)
-      NaiveBayes_ErrorRate = c(0.376,nb_misclassification)
-      KNN_Sensitivity = c(0.6346516,knn6_sensitivity)
-      KNN_Specificity = c(0.5309168,knn6_specificity
-      KNN_ErrorRate = c(0.414,knn6_misclassification)
+      Logistic_Regression_Sensitivity = c(0.3333333,0.6679389)
+      Logistic_Regression_Specificity = c(0.8528785,0.6679389)
+      Logistic_Regression_ErrorRate = c(0.423,0.5916031)
+      LDA_Sensitivity = c(0.6854991,0.5084034)
+      LDA_Specificity = c(0.4818763,0.5084034)
+      LDA_ErrorRate = c(0.410,0.5756303)
+      QDA_Sensitivity = c(0.5762712,0.4201681)
+      QDA_Specificity = c(0.6695096,0.7328244)
+      QDA_ErrorRate = c(0.380,0.6221374)
+      NaiveBayes_Sensitivity = c(0.6403013,0.4080000)
+      NaiveBayes_Specificity = c(0.6055437,0.4201681)
+      NaiveBayes_ErrorRate = c(0.376,0.4789916)
+      KNN_Sensitivity = c(0.6346516,0.4160000)
+      KNN_Specificity = c(0.5309168,0.4160000)
+      KNN_ErrorRate = c(0.414,0.4460000)
     )
 
     print(performance_df)
