--- a/Copy2OfLab1_Mountain_Dewds (1).qmd
+++ b/Copy2OfLab1_Mountain_Dewds (1).qmd
@@ -724,29 +724,34 @@ print_metrics("Naïve Bayes:", nb_metrics)
 
 1.  Summarize the models' performance using all of the results from each individual.
 
-    ```{r}
-    performance_df <- data.frame(
-      Individual = c("Josh","Rishi"),
-      Logistic_Regression_Sensitivity = c(0.3333333,0.6679389)
-      Logistic_Regression_Specificity = c(0.8528785,0.6679389)
-      Logistic_Regression_ErrorRate = c(0.423,0.5916031)
-      LDA_Sensitivity = c(0.6854991,0.5084034)
-      LDA_Specificity = c(0.4818763,0.5084034)
-      LDA_ErrorRate = c(0.410,0.5756303)
-      QDA_Sensitivity = c(0.5762712,0.4201681)
-      QDA_Specificity = c(0.6695096,0.7328244)
-      QDA_ErrorRate = c(0.380,0.6221374)
-      NaiveBayes_Sensitivity = c(0.6403013,0.4080000)
-      NaiveBayes_Specificity = c(0.6055437,0.4201681)
-      NaiveBayes_ErrorRate = c(0.376,0.4789916)
-      KNN_Sensitivity = c(0.6346516,0.4160000)
-      KNN_Specificity = c(0.5309168,0.4160000)
-      KNN_ErrorRate = c(0.414,0.4460000)
-    )
+```{r}
+performance_df <- data.frame(
+  Individual = c("Josh", "Rishi", "Will"),
+  
+  Logistic_Regression_Sensitivity = c(0.3333333, 0.6679389, 0.5010616),
+  Logistic_Regression_Specificity = c(0.8528785, 0.6679389, 0.6767486),
+  Logistic_Regression_ErrorRate = c(0.423, 0.5916031, 0.406),
+  
+  LDA_Sensitivity = c(0.6854991, 0.5084034, 0.4989384),
+  LDA_Specificity = c(0.4818763, 0.5084034, 0.6767486),
+  LDA_ErrorRate = c(0.410, 0.5756303, 0.407),
+  
+  QDA_Sensitivity = c(0.5762712, 0.4201681, 0.6751592),
+  QDA_Specificity = c(0.6695096, 0.7328244, 0.5614367),
+  QDA_ErrorRate = c(0.380, 0.6221374, 0.385),
+  
+  NaiveBayes_Sensitivity = c(0.6403013, 0.4080000, 0.5944798),
+  NaiveBayes_Specificity = c(0.6055437, 0.4201681, 0.6351607),
+  NaiveBayes_ErrorRate = c(0.376, 0.4789916, 0.384),
+  
+  KNN_Sensitivity = c(0.6346516, 0.4160000, 0.6985138),
+  KNN_Specificity = c(0.5309168, 0.4160000, 0.7637051),
+  KNN_ErrorRate = c(0.414, 0.4460000, 0.267)
+)
 
-    print(performance_df)
-
-    ```
+# Print the dataframe
+print(performance_df)
+```
 
 **Summary of Averaged Values**
 
